src/objects/Evento_BackShop__c.object
<CustomObject>
    <fields>
        <fullName>Cantidad_de_edificios__c</fullName>
        <label>Cantidad de edificios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cantidad_de_edificios_condicion__c</fullName>
        <label>Cantidad de edificios condicion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripcion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FiltroCuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FiltroCuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Eventos BackShop</relationshipLabel>
        <relationshipName>Eventos_BackShop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Indica_la_cantidad_de_sucursales__c</fullName>
        <label>Indica la cantidad de sucursales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indica_la_cantidad_de_sucursales_cond__c</fullName>
        <label>Indica la cantidad de sucursales cond</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ingresos_anuales_del_cliente__c</fullName>
        <label>Ingresos anuales del cliente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ingresos_anuales_del_cliente_condicion__c</fullName>
        <label>Ingresos anuales del cliente condicion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <label>Pais</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Eventos BackShop</relationshipLabel>
        <relationshipName>Eventos_BackShop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercio</fullName>
                </value>
                <value>
                    <fullName>Comunicaciones y tecnologia</fullName>
                </value>
                <value>
                    <fullName>Financiero</fullName>
                </value>
                <value>
                    <fullName>Industria</fullName>
                </value>
                <value>
                    <fullName>Sector Público</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
                <value>
                    <fullName>Servicios Públicos</fullName>
                </value>
                <value>
                    <fullName>Transporte</fullName>
                </value>
                <value>
                    <fullName>Todos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_sector__c</fullName>
        <label>Sub sector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sector__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Centros Comerciales</fullName>
                </value>
                <value>
                    <fullName>Automotores y Camiones</fullName>
                </value>
                <value>
                    <fullName>Droguerías</fullName>
                </value>
                <value>
                    <fullName>Tienda Departamental</fullName>
                </value>
                <value>
                    <fullName>Otros Comercios</fullName>
                </value>
                <value>
                    <fullName>Supermercados</fullName>
                </value>
                <value>
                    <fullName>Alimentos y Bebidas</fullName>
                </value>
                <value>
                    <fullName>Textil y Calzado</fullName>
                </value>
                <value>
                    <fullName>Combustibles y Lubricantes</fullName>
                </value>
                <value>
                    <fullName>Call Centers</fullName>
                </value>
                <value>
                    <fullName>Grupo Telefonica</fullName>
                </value>
                <value>
                    <fullName>Hardware Tecnológico</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Contenido Multimedia</fullName>
                </value>
                <value>
                    <fullName>Telcos e Internet</fullName>
                </value>
                <value>
                    <fullName>Banca</fullName>
                </value>
                <value>
                    <fullName>Instituciones financieras no bancarias</fullName>
                </value>
                <value>
                    <fullName>Medios de Pago</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Agro, Pesca y Forestación</fullName>
                </value>
                <value>
                    <fullName>Construccion</fullName>
                </value>
                <value>
                    <fullName>Industria Alimentos</fullName>
                </value>
                <value>
                    <fullName>Industria Automotriz y Autopartes</fullName>
                </value>
                <value>
                    <fullName>Industria Ligera y Manufacturas</fullName>
                </value>
                <value>
                    <fullName>Industria Metalurgica y Pesada</fullName>
                </value>
                <value>
                    <fullName>Industria Química</fullName>
                </value>
                <value>
                    <fullName>Industria Textil y Calzado</fullName>
                </value>
                <value>
                    <fullName>Laboratorios</fullName>
                </value>
                <value>
                    <fullName>Mineria</fullName>
                </value>
                <value>
                    <fullName>Petroleo y Gas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cantidad_de_empleados__c</fullName>
        <label>cantidad de empleados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cantidad_de_empleados_condicion__c</fullName>
        <label>cantidad de empleados condicion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cuantos_veh_culos_dispone_el_parque__c</fullName>
        <label>cuantos vehículos dispone el parque</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cuantos_veh_culos_dispone_el_parque_cond__c</fullName>
        <label>cuantos vehículos dispone el parque cond</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ispone_de_parque_automotor__c</fullName>
        <label>ispone de parque automotor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Evento BackShop</label>
    <nameField>
        <label>Nombre de BackShop</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eventos BackShop</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>